--- a/docs/latex/ffmpeg__x264_8c.tex
+++ b/docs/latex/ffmpeg__x264_8c.tex
@@ -117,7 +117,7 @@ F\+Fmpeg\textquotesingle{}s x264 video encoder settings context structure.
 )\hspace{0.3cm}{\ttfamily [static]}}\hypertarget{ffmpeg__x264_8c_ad51aa4678caf150230bb8f0696df40d9}{}\label{ffmpeg__x264_8c_ad51aa4678caf150230bb8f0696df40d9}
 Implements the \hyperlink{structproc__if__s_af5971ac1d09d1c6ec3508c36fb286c19}{proc\+\_\+if\+\_\+s\+::close} callback. See .\hyperlink{proc__if_8h}{proc\+\_\+if.\+h} for further details. 
 
-Definition at line 641 of file ffmpeg\+\_\+x264.\+c.
+Definition at line 647 of file ffmpeg\+\_\+x264.\+c.
 
 \index{ffmpeg\+\_\+x264.\+c@{ffmpeg\+\_\+x264.\+c}!ffmpeg\+\_\+x264\+\_\+dec\+\_\+open@{ffmpeg\+\_\+x264\+\_\+dec\+\_\+open}}
 \index{ffmpeg\+\_\+x264\+\_\+dec\+\_\+open@{ffmpeg\+\_\+x264\+\_\+dec\+\_\+open}!ffmpeg\+\_\+x264.\+c@{ffmpeg\+\_\+x264.\+c}}
@@ -131,7 +131,7 @@ Definition at line 641 of file ffmpeg\+\_\+x264.\+c.
 )\hspace{0.3cm}{\ttfamily [static]}}\hypertarget{ffmpeg__x264_8c_a1a7324b724b792fcdfc763b74b048c53}{}\label{ffmpeg__x264_8c_a1a7324b724b792fcdfc763b74b048c53}
 Implements the \hyperlink{structproc__if__s_a34999576771394dfb721463c8455ba06}{proc\+\_\+if\+\_\+s\+::open} callback. See .\hyperlink{proc__if_8h}{proc\+\_\+if.\+h} for further details. 
 
-Definition at line 582 of file ffmpeg\+\_\+x264.\+c.
+Definition at line 588 of file ffmpeg\+\_\+x264.\+c.
 
 \index{ffmpeg\+\_\+x264.\+c@{ffmpeg\+\_\+x264.\+c}!ffmpeg\+\_\+x264\+\_\+dec\+\_\+process\+\_\+frame@{ffmpeg\+\_\+x264\+\_\+dec\+\_\+process\+\_\+frame}}
 \index{ffmpeg\+\_\+x264\+\_\+dec\+\_\+process\+\_\+frame@{ffmpeg\+\_\+x264\+\_\+dec\+\_\+process\+\_\+frame}!ffmpeg\+\_\+x264.\+c@{ffmpeg\+\_\+x264.\+c}}
@@ -144,7 +144,7 @@ Definition at line 582 of file ffmpeg\+\_\+x264.\+c.
 )\hspace{0.3cm}{\ttfamily [static]}}\hypertarget{ffmpeg__x264_8c_adfd2aa30ac6f4edefd59ff99d3ab58e1}{}\label{ffmpeg__x264_8c_adfd2aa30ac6f4edefd59ff99d3ab58e1}
 Implements the \hyperlink{structproc__if__s_ab67b4061f94b6f15ae40c796b6b33597}{proc\+\_\+if\+\_\+s\+::process\+\_\+frame} callback. See .\hyperlink{proc__if_8h}{proc\+\_\+if.\+h} for further details. 
 
-Definition at line 672 of file ffmpeg\+\_\+x264.\+c.
+Definition at line 678 of file ffmpeg\+\_\+x264.\+c.
 
 \index{ffmpeg\+\_\+x264.\+c@{ffmpeg\+\_\+x264.\+c}!ffmpeg\+\_\+x264\+\_\+dec\+\_\+rest\+\_\+get@{ffmpeg\+\_\+x264\+\_\+dec\+\_\+rest\+\_\+get}}
 \index{ffmpeg\+\_\+x264\+\_\+dec\+\_\+rest\+\_\+get@{ffmpeg\+\_\+x264\+\_\+dec\+\_\+rest\+\_\+get}!ffmpeg\+\_\+x264.\+c@{ffmpeg\+\_\+x264.\+c}}
@@ -157,7 +157,7 @@ Definition at line 672 of file ffmpeg\+\_\+x264.\+c.
 )\hspace{0.3cm}{\ttfamily [static]}}\hypertarget{ffmpeg__x264_8c_a58aed65fb9afb7a7f1c4c139f21377e4}{}\label{ffmpeg__x264_8c_a58aed65fb9afb7a7f1c4c139f21377e4}
 Implements the \hyperlink{structproc__if__s_a1e45b33c52b931954f7a0d8a14f0db53}{proc\+\_\+if\+\_\+s\+::rest\+\_\+get} callback. See .\hyperlink{proc__if_8h}{proc\+\_\+if.\+h} for further details. 
 
-Definition at line 760 of file ffmpeg\+\_\+x264.\+c.
+Definition at line 766 of file ffmpeg\+\_\+x264.\+c.
 
 \index{ffmpeg\+\_\+x264.\+c@{ffmpeg\+\_\+x264.\+c}!ffmpeg\+\_\+x264\+\_\+dec\+\_\+rest\+\_\+put@{ffmpeg\+\_\+x264\+\_\+dec\+\_\+rest\+\_\+put}}
 \index{ffmpeg\+\_\+x264\+\_\+dec\+\_\+rest\+\_\+put@{ffmpeg\+\_\+x264\+\_\+dec\+\_\+rest\+\_\+put}!ffmpeg\+\_\+x264.\+c@{ffmpeg\+\_\+x264.\+c}}
@@ -169,7 +169,7 @@ Definition at line 760 of file ffmpeg\+\_\+x264.\+c.
 )\hspace{0.3cm}{\ttfamily [static]}}\hypertarget{ffmpeg__x264_8c_a4e985585f97641e8362201b9c339b7ba}{}\label{ffmpeg__x264_8c_a4e985585f97641e8362201b9c339b7ba}
 Implements the \hyperlink{structproc__if__s_acb4d2c240c52904ebd6904f54b1a9b78}{proc\+\_\+if\+\_\+s\+::rest\+\_\+put} callback. See .\hyperlink{proc__if_8h}{proc\+\_\+if.\+h} for further details. 
 
-Definition at line 718 of file ffmpeg\+\_\+x264.\+c.
+Definition at line 724 of file ffmpeg\+\_\+x264.\+c.
 
 \index{ffmpeg\+\_\+x264.\+c@{ffmpeg\+\_\+x264.\+c}!ffmpeg\+\_\+x264\+\_\+dec\+\_\+settings\+\_\+ctx\+\_\+deinit@{ffmpeg\+\_\+x264\+\_\+dec\+\_\+settings\+\_\+ctx\+\_\+deinit}}
 \index{ffmpeg\+\_\+x264\+\_\+dec\+\_\+settings\+\_\+ctx\+\_\+deinit@{ffmpeg\+\_\+x264\+\_\+dec\+\_\+settings\+\_\+ctx\+\_\+deinit}!ffmpeg\+\_\+x264.\+c@{ffmpeg\+\_\+x264.\+c}}
@@ -188,7 +188,7 @@ Release specific x264 decoder settings (allocated in heap memory).
 \end{DoxyParams}
 
 
-Definition at line 890 of file ffmpeg\+\_\+x264.\+c.
+Definition at line 896 of file ffmpeg\+\_\+x264.\+c.
 
 \index{ffmpeg\+\_\+x264.\+c@{ffmpeg\+\_\+x264.\+c}!ffmpeg\+\_\+x264\+\_\+dec\+\_\+settings\+\_\+ctx\+\_\+init@{ffmpeg\+\_\+x264\+\_\+dec\+\_\+settings\+\_\+ctx\+\_\+init}}
 \index{ffmpeg\+\_\+x264\+\_\+dec\+\_\+settings\+\_\+ctx\+\_\+init@{ffmpeg\+\_\+x264\+\_\+dec\+\_\+settings\+\_\+ctx\+\_\+init}!ffmpeg\+\_\+x264.\+c@{ffmpeg\+\_\+x264.\+c}}
@@ -210,7 +210,7 @@ Status code (S\+T\+A\+T\+\_\+\+S\+U\+C\+C\+E\+SS code in case of success, for ot
 \end{DoxyReturn}
 
 
-Definition at line 860 of file ffmpeg\+\_\+x264.\+c.
+Definition at line 866 of file ffmpeg\+\_\+x264.\+c.
 
 \index{ffmpeg\+\_\+x264.\+c@{ffmpeg\+\_\+x264.\+c}!ffmpeg\+\_\+x264\+\_\+enc\+\_\+close@{ffmpeg\+\_\+x264\+\_\+enc\+\_\+close}}
 \index{ffmpeg\+\_\+x264\+\_\+enc\+\_\+close@{ffmpeg\+\_\+x264\+\_\+enc\+\_\+close}!ffmpeg\+\_\+x264.\+c@{ffmpeg\+\_\+x264.\+c}}
@@ -221,7 +221,7 @@ Definition at line 860 of file ffmpeg\+\_\+x264.\+c.
 )\hspace{0.3cm}{\ttfamily [static]}}\hypertarget{ffmpeg__x264_8c_a1da68596d0c2f10605a6a0830b996c07}{}\label{ffmpeg__x264_8c_a1da68596d0c2f10605a6a0830b996c07}
 Implements the \hyperlink{structproc__if__s_af5971ac1d09d1c6ec3508c36fb286c19}{proc\+\_\+if\+\_\+s\+::close} callback. See .\hyperlink{proc__if_8h}{proc\+\_\+if.\+h} for further details. 
 
-Definition at line 245 of file ffmpeg\+\_\+x264.\+c.
+Definition at line 251 of file ffmpeg\+\_\+x264.\+c.
 
 \index{ffmpeg\+\_\+x264.\+c@{ffmpeg\+\_\+x264.\+c}!ffmpeg\+\_\+x264\+\_\+enc\+\_\+open@{ffmpeg\+\_\+x264\+\_\+enc\+\_\+open}}
 \index{ffmpeg\+\_\+x264\+\_\+enc\+\_\+open@{ffmpeg\+\_\+x264\+\_\+enc\+\_\+open}!ffmpeg\+\_\+x264.\+c@{ffmpeg\+\_\+x264.\+c}}
@@ -235,7 +235,7 @@ Definition at line 245 of file ffmpeg\+\_\+x264.\+c.
 )\hspace{0.3cm}{\ttfamily [static]}}\hypertarget{ffmpeg__x264_8c_a86e4d3fde303a71b25964ab54133ec68}{}\label{ffmpeg__x264_8c_a86e4d3fde303a71b25964ab54133ec68}
 Implements the \hyperlink{structproc__if__s_a34999576771394dfb721463c8455ba06}{proc\+\_\+if\+\_\+s\+::open} callback. See .\hyperlink{proc__if_8h}{proc\+\_\+if.\+h} for further details. 
 
-Definition at line 186 of file ffmpeg\+\_\+x264.\+c.
+Definition at line 192 of file ffmpeg\+\_\+x264.\+c.
 
 \index{ffmpeg\+\_\+x264.\+c@{ffmpeg\+\_\+x264.\+c}!ffmpeg\+\_\+x264\+\_\+enc\+\_\+process\+\_\+frame@{ffmpeg\+\_\+x264\+\_\+enc\+\_\+process\+\_\+frame}}
 \index{ffmpeg\+\_\+x264\+\_\+enc\+\_\+process\+\_\+frame@{ffmpeg\+\_\+x264\+\_\+enc\+\_\+process\+\_\+frame}!ffmpeg\+\_\+x264.\+c@{ffmpeg\+\_\+x264.\+c}}
@@ -248,7 +248,7 @@ Definition at line 186 of file ffmpeg\+\_\+x264.\+c.
 )\hspace{0.3cm}{\ttfamily [static]}}\hypertarget{ffmpeg__x264_8c_a261d9af751369524a2c233baf10ef154}{}\label{ffmpeg__x264_8c_a261d9af751369524a2c233baf10ef154}
 Implements the \hyperlink{structproc__if__s_ab67b4061f94b6f15ae40c796b6b33597}{proc\+\_\+if\+\_\+s\+::process\+\_\+frame} callback. See .\hyperlink{proc__if_8h}{proc\+\_\+if.\+h} for further details. 
 
-Definition at line 276 of file ffmpeg\+\_\+x264.\+c.
+Definition at line 282 of file ffmpeg\+\_\+x264.\+c.
 
 \index{ffmpeg\+\_\+x264.\+c@{ffmpeg\+\_\+x264.\+c}!ffmpeg\+\_\+x264\+\_\+enc\+\_\+rest\+\_\+get@{ffmpeg\+\_\+x264\+\_\+enc\+\_\+rest\+\_\+get}}
 \index{ffmpeg\+\_\+x264\+\_\+enc\+\_\+rest\+\_\+get@{ffmpeg\+\_\+x264\+\_\+enc\+\_\+rest\+\_\+get}!ffmpeg\+\_\+x264.\+c@{ffmpeg\+\_\+x264.\+c}}
@@ -261,7 +261,7 @@ Definition at line 276 of file ffmpeg\+\_\+x264.\+c.
 )\hspace{0.3cm}{\ttfamily [static]}}\hypertarget{ffmpeg__x264_8c_a93ade72563d866e4354905e6250787dd}{}\label{ffmpeg__x264_8c_a93ade72563d866e4354905e6250787dd}
 Implements the \hyperlink{structproc__if__s_a1e45b33c52b931954f7a0d8a14f0db53}{proc\+\_\+if\+\_\+s\+::rest\+\_\+get} callback. See .\hyperlink{proc__if_8h}{proc\+\_\+if.\+h} for further details. 
 
-Definition at line 415 of file ffmpeg\+\_\+x264.\+c.
+Definition at line 421 of file ffmpeg\+\_\+x264.\+c.
 
 \index{ffmpeg\+\_\+x264.\+c@{ffmpeg\+\_\+x264.\+c}!ffmpeg\+\_\+x264\+\_\+enc\+\_\+rest\+\_\+put@{ffmpeg\+\_\+x264\+\_\+enc\+\_\+rest\+\_\+put}}
 \index{ffmpeg\+\_\+x264\+\_\+enc\+\_\+rest\+\_\+put@{ffmpeg\+\_\+x264\+\_\+enc\+\_\+rest\+\_\+put}!ffmpeg\+\_\+x264.\+c@{ffmpeg\+\_\+x264.\+c}}
@@ -273,7 +273,7 @@ Definition at line 415 of file ffmpeg\+\_\+x264.\+c.
 )\hspace{0.3cm}{\ttfamily [static]}}\hypertarget{ffmpeg__x264_8c_a3a8cedbbedb206d21e9e4eea447fc02a}{}\label{ffmpeg__x264_8c_a3a8cedbbedb206d21e9e4eea447fc02a}
 Implements the \hyperlink{structproc__if__s_acb4d2c240c52904ebd6904f54b1a9b78}{proc\+\_\+if\+\_\+s\+::rest\+\_\+put} callback. See .\hyperlink{proc__if_8h}{proc\+\_\+if.\+h} for further details. 
 
-Definition at line 322 of file ffmpeg\+\_\+x264.\+c.
+Definition at line 328 of file ffmpeg\+\_\+x264.\+c.
 
 \index{ffmpeg\+\_\+x264.\+c@{ffmpeg\+\_\+x264.\+c}!ffmpeg\+\_\+x264\+\_\+enc\+\_\+settings\+\_\+ctx\+\_\+deinit@{ffmpeg\+\_\+x264\+\_\+enc\+\_\+settings\+\_\+ctx\+\_\+deinit}}
 \index{ffmpeg\+\_\+x264\+\_\+enc\+\_\+settings\+\_\+ctx\+\_\+deinit@{ffmpeg\+\_\+x264\+\_\+enc\+\_\+settings\+\_\+ctx\+\_\+deinit}!ffmpeg\+\_\+x264.\+c@{ffmpeg\+\_\+x264.\+c}}
@@ -292,7 +292,7 @@ Release specific x264 encoder settings (allocated in heap memory).
 \end{DoxyParams}
 
 
-Definition at line 558 of file ffmpeg\+\_\+x264.\+c.
+Definition at line 564 of file ffmpeg\+\_\+x264.\+c.
 
 \index{ffmpeg\+\_\+x264.\+c@{ffmpeg\+\_\+x264.\+c}!ffmpeg\+\_\+x264\+\_\+enc\+\_\+settings\+\_\+ctx\+\_\+init@{ffmpeg\+\_\+x264\+\_\+enc\+\_\+settings\+\_\+ctx\+\_\+init}}
 \index{ffmpeg\+\_\+x264\+\_\+enc\+\_\+settings\+\_\+ctx\+\_\+init@{ffmpeg\+\_\+x264\+\_\+enc\+\_\+settings\+\_\+ctx\+\_\+init}!ffmpeg\+\_\+x264.\+c@{ffmpeg\+\_\+x264.\+c}}
@@ -314,7 +314,7 @@ Status code (S\+T\+A\+T\+\_\+\+S\+U\+C\+C\+E\+SS code in case of success, for ot
 \end{DoxyReturn}
 
 
-Definition at line 524 of file ffmpeg\+\_\+x264.\+c.
+Definition at line 530 of file ffmpeg\+\_\+x264.\+c.
 
 
 
@@ -327,10 +327,13 @@ Definition at line 524 of file ffmpeg\+\_\+x264.\+c.
 =
 \{
     \textcolor{stringliteral}{"ffmpeg\_x264\_dec"}, \textcolor{stringliteral}{"decoder"}, \textcolor{stringliteral}{"video/H264"},
-    (uint64\_t)(PROC\_FEATURE\_RD|PROC\_FEATURE\_WR|PROC\_FEATURE\_IOSTATS|
-            PROC\_FEATURE\_IPUT\_PTS|PROC\_FEATURE\_LATSTATS),
+    (uint64\_t)(PROC\_FEATURE\_BITRATE|PROC\_FEATURE\_REGISTER\_PTS|
+            PROC\_FEATURE\_LATENCY),
     \hyperlink{ffmpeg__x264_8c_a1a7324b724b792fcdfc763b74b048c53}{ffmpeg\_x264\_dec\_open},
     \hyperlink{ffmpeg__x264_8c_ad51aa4678caf150230bb8f0696df40d9}{ffmpeg\_x264\_dec\_close},
+    proc\_send\_frame\_default1,
+    NULL, 
+    proc\_recv\_frame\_default1,
     \hyperlink{ffmpeg__x264_8c_a4e985585f97641e8362201b9c339b7ba}{ffmpeg\_x264\_dec\_rest\_put},
     \hyperlink{ffmpeg__x264_8c_a58aed65fb9afb7a7f1c4c139f21377e4}{ffmpeg\_x264\_dec\_rest\_get},
     \hyperlink{ffmpeg__x264_8c_adfd2aa30ac6f4edefd59ff99d3ab58e1}{ffmpeg\_x264\_dec\_process\_frame},
@@ -342,7 +345,7 @@ Definition at line 524 of file ffmpeg\+\_\+x264.\+c.
 \end{DoxyCode}
 Processor interface implementing the F\+Fmpeg wrapper of the x264 decoder. 
 
-Definition at line 166 of file ffmpeg\+\_\+x264.\+c.
+Definition at line 169 of file ffmpeg\+\_\+x264.\+c.
 
 \index{ffmpeg\+\_\+x264.\+c@{ffmpeg\+\_\+x264.\+c}!proc\+\_\+if\+\_\+ffmpeg\+\_\+x264\+\_\+enc@{proc\+\_\+if\+\_\+ffmpeg\+\_\+x264\+\_\+enc}}
 \index{proc\+\_\+if\+\_\+ffmpeg\+\_\+x264\+\_\+enc@{proc\+\_\+if\+\_\+ffmpeg\+\_\+x264\+\_\+enc}!ffmpeg\+\_\+x264.\+c@{ffmpeg\+\_\+x264.\+c}}
@@ -352,10 +355,13 @@ Definition at line 166 of file ffmpeg\+\_\+x264.\+c.
 =
 \{
     \textcolor{stringliteral}{"ffmpeg\_x264\_enc"}, \textcolor{stringliteral}{"encoder"}, \textcolor{stringliteral}{"video/H264"},
-    (uint64\_t)(PROC\_FEATURE\_RD|PROC\_FEATURE\_WR|PROC\_FEATURE\_IOSTATS|
-            PROC\_FEATURE\_IPUT\_PTS|PROC\_FEATURE\_LATSTATS),
+    (uint64\_t)(PROC\_FEATURE\_BITRATE|PROC\_FEATURE\_REGISTER\_PTS|
+            PROC\_FEATURE\_LATENCY),
     \hyperlink{ffmpeg__x264_8c_a86e4d3fde303a71b25964ab54133ec68}{ffmpeg\_x264\_enc\_open},
     \hyperlink{ffmpeg__x264_8c_a1da68596d0c2f10605a6a0830b996c07}{ffmpeg\_x264\_enc\_close},
+    proc\_send\_frame\_default1,
+    NULL, 
+    proc\_recv\_frame\_default1,
     \hyperlink{ffmpeg__x264_8c_a3a8cedbbedb206d21e9e4eea447fc02a}{ffmpeg\_x264\_enc\_rest\_put},
     \hyperlink{ffmpeg__x264_8c_a93ade72563d866e4354905e6250787dd}{ffmpeg\_x264\_enc\_rest\_get},
     \hyperlink{ffmpeg__x264_8c_a261d9af751369524a2c233baf10ef154}{ffmpeg\_x264\_enc\_process\_frame},
