--- a/docs/latex/live555__rtsp_8cpp.tex
+++ b/docs/latex/live555__rtsp_8cpp.tex
@@ -262,7 +262,7 @@ Live555\textquotesingle{}s R\+T\+SP multiplexer settings context structure.
 )\hspace{0.3cm}{\ttfamily [static]}}\hypertarget{live555__rtsp_8cpp_a6725a20c83725a3080c2eca916800dab}{}\label{live555__rtsp_8cpp_a6725a20c83725a3080c2eca916800dab}
 Implements the \hyperlink{structproc__if__s_af5971ac1d09d1c6ec3508c36fb286c19}{proc\+\_\+if\+\_\+s\+::close} callback. See .\hyperlink{proc__if_8h}{proc\+\_\+if.\+h} for further details. 
 
-Definition at line 2184 of file live555\+\_\+rtsp.\+cpp.
+Definition at line 2193 of file live555\+\_\+rtsp.\+cpp.
 
 \index{live555\+\_\+rtsp.\+cpp@{live555\+\_\+rtsp.\+cpp}!live555\+\_\+rtsp\+\_\+dmux\+\_\+open@{live555\+\_\+rtsp\+\_\+dmux\+\_\+open}}
 \index{live555\+\_\+rtsp\+\_\+dmux\+\_\+open@{live555\+\_\+rtsp\+\_\+dmux\+\_\+open}!live555\+\_\+rtsp.\+cpp@{live555\+\_\+rtsp.\+cpp}}
@@ -276,7 +276,7 @@ Definition at line 2184 of file live555\+\_\+rtsp.\+cpp.
 )\hspace{0.3cm}{\ttfamily [static]}}\hypertarget{live555__rtsp_8cpp_a47ff243b0d13dd2e2fa45e543957d4e5}{}\label{live555__rtsp_8cpp_a47ff243b0d13dd2e2fa45e543957d4e5}
 Implements the \hyperlink{structproc__if__s_a34999576771394dfb721463c8455ba06}{proc\+\_\+if\+\_\+s\+::open} callback. See .\hyperlink{proc__if_8h}{proc\+\_\+if.\+h} for further details. 
 
-Definition at line 2096 of file live555\+\_\+rtsp.\+cpp.
+Definition at line 2105 of file live555\+\_\+rtsp.\+cpp.
 
 \index{live555\+\_\+rtsp.\+cpp@{live555\+\_\+rtsp.\+cpp}!live555\+\_\+rtsp\+\_\+dmux\+\_\+process\+\_\+frame@{live555\+\_\+rtsp\+\_\+dmux\+\_\+process\+\_\+frame}}
 \index{live555\+\_\+rtsp\+\_\+dmux\+\_\+process\+\_\+frame@{live555\+\_\+rtsp\+\_\+dmux\+\_\+process\+\_\+frame}!live555\+\_\+rtsp.\+cpp@{live555\+\_\+rtsp.\+cpp}}
@@ -289,7 +289,7 @@ Definition at line 2096 of file live555\+\_\+rtsp.\+cpp.
 )\hspace{0.3cm}{\ttfamily [static]}}\hypertarget{live555__rtsp_8cpp_a7424e763a4f50f3b4563f86b28569f9d}{}\label{live555__rtsp_8cpp_a7424e763a4f50f3b4563f86b28569f9d}
 Implements the \hyperlink{structproc__if__s_ab67b4061f94b6f15ae40c796b6b33597}{proc\+\_\+if\+\_\+s\+::process\+\_\+frame} callback. See .\hyperlink{proc__if_8h}{proc\+\_\+if.\+h} for further details. 
 
-Definition at line 2409 of file live555\+\_\+rtsp.\+cpp.
+Definition at line 2418 of file live555\+\_\+rtsp.\+cpp.
 
 \index{live555\+\_\+rtsp.\+cpp@{live555\+\_\+rtsp.\+cpp}!live555\+\_\+rtsp\+\_\+dmux\+\_\+rest\+\_\+get@{live555\+\_\+rtsp\+\_\+dmux\+\_\+rest\+\_\+get}}
 \index{live555\+\_\+rtsp\+\_\+dmux\+\_\+rest\+\_\+get@{live555\+\_\+rtsp\+\_\+dmux\+\_\+rest\+\_\+get}!live555\+\_\+rtsp.\+cpp@{live555\+\_\+rtsp.\+cpp}}
@@ -302,7 +302,7 @@ Definition at line 2409 of file live555\+\_\+rtsp.\+cpp.
 )\hspace{0.3cm}{\ttfamily [static]}}\hypertarget{live555__rtsp_8cpp_a1dff06c81ab4c1f15bdc768ffb06fe51}{}\label{live555__rtsp_8cpp_a1dff06c81ab4c1f15bdc768ffb06fe51}
 Implements the \hyperlink{structproc__if__s_a1e45b33c52b931954f7a0d8a14f0db53}{proc\+\_\+if\+\_\+s\+::rest\+\_\+get} callback. See .\hyperlink{proc__if_8h}{proc\+\_\+if.\+h} for further details. 
 
-Definition at line 2246 of file live555\+\_\+rtsp.\+cpp.
+Definition at line 2255 of file live555\+\_\+rtsp.\+cpp.
 
 \index{live555\+\_\+rtsp.\+cpp@{live555\+\_\+rtsp.\+cpp}!live555\+\_\+rtsp\+\_\+dmux\+\_\+rest\+\_\+put@{live555\+\_\+rtsp\+\_\+dmux\+\_\+rest\+\_\+put}}
 \index{live555\+\_\+rtsp\+\_\+dmux\+\_\+rest\+\_\+put@{live555\+\_\+rtsp\+\_\+dmux\+\_\+rest\+\_\+put}!live555\+\_\+rtsp.\+cpp@{live555\+\_\+rtsp.\+cpp}}
@@ -314,7 +314,7 @@ Definition at line 2246 of file live555\+\_\+rtsp.\+cpp.
 )\hspace{0.3cm}{\ttfamily [static]}}\hypertarget{live555__rtsp_8cpp_abd61654410d5c9ce8d3d7fc52430d8be}{}\label{live555__rtsp_8cpp_abd61654410d5c9ce8d3d7fc52430d8be}
 Implements the \hyperlink{structproc__if__s_acb4d2c240c52904ebd6904f54b1a9b78}{proc\+\_\+if\+\_\+s\+::rest\+\_\+put} callback. See .\hyperlink{proc__if_8h}{proc\+\_\+if.\+h} for further details. 
 
-Definition at line 2501 of file live555\+\_\+rtsp.\+cpp.
+Definition at line 2510 of file live555\+\_\+rtsp.\+cpp.
 
 \index{live555\+\_\+rtsp.\+cpp@{live555\+\_\+rtsp.\+cpp}!live555\+\_\+rtsp\+\_\+dmux\+\_\+settings\+\_\+ctx\+\_\+deinit@{live555\+\_\+rtsp\+\_\+dmux\+\_\+settings\+\_\+ctx\+\_\+deinit}}
 \index{live555\+\_\+rtsp\+\_\+dmux\+\_\+settings\+\_\+ctx\+\_\+deinit@{live555\+\_\+rtsp\+\_\+dmux\+\_\+settings\+\_\+ctx\+\_\+deinit}!live555\+\_\+rtsp.\+cpp@{live555\+\_\+rtsp.\+cpp}}
@@ -333,7 +333,7 @@ Release specific Live555 R\+T\+SP de-\/multiplexer settings (allocated in heap m
 \end{DoxyParams}
 
 
-Definition at line 2577 of file live555\+\_\+rtsp.\+cpp.
+Definition at line 2586 of file live555\+\_\+rtsp.\+cpp.
 
 \index{live555\+\_\+rtsp.\+cpp@{live555\+\_\+rtsp.\+cpp}!live555\+\_\+rtsp\+\_\+dmux\+\_\+settings\+\_\+ctx\+\_\+init@{live555\+\_\+rtsp\+\_\+dmux\+\_\+settings\+\_\+ctx\+\_\+init}}
 \index{live555\+\_\+rtsp\+\_\+dmux\+\_\+settings\+\_\+ctx\+\_\+init@{live555\+\_\+rtsp\+\_\+dmux\+\_\+settings\+\_\+ctx\+\_\+init}!live555\+\_\+rtsp.\+cpp@{live555\+\_\+rtsp.\+cpp}}
@@ -355,7 +355,7 @@ Status code (S\+T\+A\+T\+\_\+\+S\+U\+C\+C\+E\+SS code in case of success, for ot
 \end{DoxyReturn}
 
 
-Definition at line 2546 of file live555\+\_\+rtsp.\+cpp.
+Definition at line 2555 of file live555\+\_\+rtsp.\+cpp.
 
 \index{live555\+\_\+rtsp.\+cpp@{live555\+\_\+rtsp.\+cpp}!live555\+\_\+rtsp\+\_\+es\+\_\+mux\+\_\+close@{live555\+\_\+rtsp\+\_\+es\+\_\+mux\+\_\+close}}
 \index{live555\+\_\+rtsp\+\_\+es\+\_\+mux\+\_\+close@{live555\+\_\+rtsp\+\_\+es\+\_\+mux\+\_\+close}!live555\+\_\+rtsp.\+cpp@{live555\+\_\+rtsp.\+cpp}}
@@ -366,7 +366,7 @@ Definition at line 2546 of file live555\+\_\+rtsp.\+cpp.
 )\hspace{0.3cm}{\ttfamily [static]}}\hypertarget{live555__rtsp_8cpp_a5ecc6f5de6844803a83fab12a13476a2}{}\label{live555__rtsp_8cpp_a5ecc6f5de6844803a83fab12a13476a2}
 Implements the \hyperlink{structproc__if__s_af5971ac1d09d1c6ec3508c36fb286c19}{proc\+\_\+if\+\_\+s\+::close} callback. See .\hyperlink{proc__if_8h}{proc\+\_\+if.\+h} for further details. 
 
-Definition at line 1373 of file live555\+\_\+rtsp.\+cpp.
+Definition at line 1382 of file live555\+\_\+rtsp.\+cpp.
 
 \index{live555\+\_\+rtsp.\+cpp@{live555\+\_\+rtsp.\+cpp}!live555\+\_\+rtsp\+\_\+es\+\_\+mux\+\_\+process\+\_\+frame@{live555\+\_\+rtsp\+\_\+es\+\_\+mux\+\_\+process\+\_\+frame}}
 \index{live555\+\_\+rtsp\+\_\+es\+\_\+mux\+\_\+process\+\_\+frame@{live555\+\_\+rtsp\+\_\+es\+\_\+mux\+\_\+process\+\_\+frame}!live555\+\_\+rtsp.\+cpp@{live555\+\_\+rtsp.\+cpp}}
@@ -379,7 +379,7 @@ Definition at line 1373 of file live555\+\_\+rtsp.\+cpp.
 )\hspace{0.3cm}{\ttfamily [static]}}\hypertarget{live555__rtsp_8cpp_abb290dc91efdc5ecf11447a219348321}{}\label{live555__rtsp_8cpp_abb290dc91efdc5ecf11447a219348321}
 Implements the \hyperlink{structproc__if__s_ab67b4061f94b6f15ae40c796b6b33597}{proc\+\_\+if\+\_\+s\+::process\+\_\+frame} callback. See .\hyperlink{proc__if_8h}{proc\+\_\+if.\+h} for further details. 
 
-Definition at line 1404 of file live555\+\_\+rtsp.\+cpp.
+Definition at line 1413 of file live555\+\_\+rtsp.\+cpp.
 
 \index{live555\+\_\+rtsp.\+cpp@{live555\+\_\+rtsp.\+cpp}!live555\+\_\+rtsp\+\_\+es\+\_\+mux\+\_\+rest\+\_\+get@{live555\+\_\+rtsp\+\_\+es\+\_\+mux\+\_\+rest\+\_\+get}}
 \index{live555\+\_\+rtsp\+\_\+es\+\_\+mux\+\_\+rest\+\_\+get@{live555\+\_\+rtsp\+\_\+es\+\_\+mux\+\_\+rest\+\_\+get}!live555\+\_\+rtsp.\+cpp@{live555\+\_\+rtsp.\+cpp}}
@@ -392,7 +392,7 @@ Definition at line 1404 of file live555\+\_\+rtsp.\+cpp.
 )\hspace{0.3cm}{\ttfamily [static]}}\hypertarget{live555__rtsp_8cpp_a56e14bf531cf71bcc507f3f19d1f6d26}{}\label{live555__rtsp_8cpp_a56e14bf531cf71bcc507f3f19d1f6d26}
 Implements the \hyperlink{structproc__if__s_a1e45b33c52b931954f7a0d8a14f0db53}{proc\+\_\+if\+\_\+s\+::rest\+\_\+get} callback. See .\hyperlink{proc__if_8h}{proc\+\_\+if.\+h} for further details. 
 
-Definition at line 1561 of file live555\+\_\+rtsp.\+cpp.
+Definition at line 1570 of file live555\+\_\+rtsp.\+cpp.
 
 \index{live555\+\_\+rtsp.\+cpp@{live555\+\_\+rtsp.\+cpp}!live555\+\_\+rtsp\+\_\+es\+\_\+mux\+\_\+rest\+\_\+put@{live555\+\_\+rtsp\+\_\+es\+\_\+mux\+\_\+rest\+\_\+put}}
 \index{live555\+\_\+rtsp\+\_\+es\+\_\+mux\+\_\+rest\+\_\+put@{live555\+\_\+rtsp\+\_\+es\+\_\+mux\+\_\+rest\+\_\+put}!live555\+\_\+rtsp.\+cpp@{live555\+\_\+rtsp.\+cpp}}
@@ -404,7 +404,7 @@ Definition at line 1561 of file live555\+\_\+rtsp.\+cpp.
 )\hspace{0.3cm}{\ttfamily [static]}}\hypertarget{live555__rtsp_8cpp_ab43b1de001e299f5a71b7c6ca41c3835}{}\label{live555__rtsp_8cpp_ab43b1de001e299f5a71b7c6ca41c3835}
 Implements the \hyperlink{structproc__if__s_acb4d2c240c52904ebd6904f54b1a9b78}{proc\+\_\+if\+\_\+s\+::rest\+\_\+put} callback. See .\hyperlink{proc__if_8h}{proc\+\_\+if.\+h} for further details. 
 
-Definition at line 1456 of file live555\+\_\+rtsp.\+cpp.
+Definition at line 1465 of file live555\+\_\+rtsp.\+cpp.
 
 \index{live555\+\_\+rtsp.\+cpp@{live555\+\_\+rtsp.\+cpp}!live555\+\_\+rtsp\+\_\+mux\+\_\+close@{live555\+\_\+rtsp\+\_\+mux\+\_\+close}}
 \index{live555\+\_\+rtsp\+\_\+mux\+\_\+close@{live555\+\_\+rtsp\+\_\+mux\+\_\+close}!live555\+\_\+rtsp.\+cpp@{live555\+\_\+rtsp.\+cpp}}
@@ -415,7 +415,7 @@ Definition at line 1456 of file live555\+\_\+rtsp.\+cpp.
 )\hspace{0.3cm}{\ttfamily [static]}}\hypertarget{live555__rtsp_8cpp_ae36c82c14b171460aad0cdf9b167c5b0}{}\label{live555__rtsp_8cpp_ae36c82c14b171460aad0cdf9b167c5b0}
 Implements the \hyperlink{structproc__if__s_af5971ac1d09d1c6ec3508c36fb286c19}{proc\+\_\+if\+\_\+s\+::close} callback. See .\hyperlink{proc__if_8h}{proc\+\_\+if.\+h} for further details. 
 
-Definition at line 736 of file live555\+\_\+rtsp.\+cpp.
+Definition at line 745 of file live555\+\_\+rtsp.\+cpp.
 
 \index{live555\+\_\+rtsp.\+cpp@{live555\+\_\+rtsp.\+cpp}!live555\+\_\+rtsp\+\_\+mux\+\_\+deinit\+\_\+except\+\_\+settings@{live555\+\_\+rtsp\+\_\+mux\+\_\+deinit\+\_\+except\+\_\+settings}}
 \index{live555\+\_\+rtsp\+\_\+mux\+\_\+deinit\+\_\+except\+\_\+settings@{live555\+\_\+rtsp\+\_\+mux\+\_\+deinit\+\_\+except\+\_\+settings}!live555\+\_\+rtsp.\+cpp@{live555\+\_\+rtsp.\+cpp}}
@@ -427,7 +427,7 @@ Definition at line 736 of file live555\+\_\+rtsp.\+cpp.
 )\hspace{0.3cm}{\ttfamily [static]}}\hypertarget{live555__rtsp_8cpp_a30be2a6d7c8e8c64b7c3d3ca4d712584}{}\label{live555__rtsp_8cpp_a30be2a6d7c8e8c64b7c3d3ca4d712584}
 Release R\+T\+SP multiplexer at the exception of its settings context structure. 
 
-Definition at line 767 of file live555\+\_\+rtsp.\+cpp.
+Definition at line 776 of file live555\+\_\+rtsp.\+cpp.
 
 \index{live555\+\_\+rtsp.\+cpp@{live555\+\_\+rtsp.\+cpp}!live555\+\_\+rtsp\+\_\+mux\+\_\+open@{live555\+\_\+rtsp\+\_\+mux\+\_\+open}}
 \index{live555\+\_\+rtsp\+\_\+mux\+\_\+open@{live555\+\_\+rtsp\+\_\+mux\+\_\+open}!live555\+\_\+rtsp.\+cpp@{live555\+\_\+rtsp.\+cpp}}
@@ -441,7 +441,7 @@ Definition at line 767 of file live555\+\_\+rtsp.\+cpp.
 )\hspace{0.3cm}{\ttfamily [static]}}\hypertarget{live555__rtsp_8cpp_a2f593befac270f3c0f87fd59306c9a07}{}\label{live555__rtsp_8cpp_a2f593befac270f3c0f87fd59306c9a07}
 Implements the \hyperlink{structproc__if__s_a34999576771394dfb721463c8455ba06}{proc\+\_\+if\+\_\+s\+::open} callback. See .\hyperlink{proc__if_8h}{proc\+\_\+if.\+h} for further details. 
 
-Definition at line 601 of file live555\+\_\+rtsp.\+cpp.
+Definition at line 610 of file live555\+\_\+rtsp.\+cpp.
 
 \index{live555\+\_\+rtsp.\+cpp@{live555\+\_\+rtsp.\+cpp}!live555\+\_\+rtsp\+\_\+mux\+\_\+opt@{live555\+\_\+rtsp\+\_\+mux\+\_\+opt}}
 \index{live555\+\_\+rtsp\+\_\+mux\+\_\+opt@{live555\+\_\+rtsp\+\_\+mux\+\_\+opt}!live555\+\_\+rtsp.\+cpp@{live555\+\_\+rtsp.\+cpp}}
@@ -454,7 +454,7 @@ Definition at line 601 of file live555\+\_\+rtsp.\+cpp.
 )\hspace{0.3cm}{\ttfamily [static]}}\hypertarget{live555__rtsp_8cpp_ad353f75943a3ca57089e984dd6a63821}{}\label{live555__rtsp_8cpp_ad353f75943a3ca57089e984dd6a63821}
 Implements the \hyperlink{structproc__if__s_a4ca0939d6721f368d2560851197fca36}{proc\+\_\+if\+\_\+s\+::opt} callback. See .\hyperlink{proc__if_8h}{proc\+\_\+if.\+h} for further details. 
 
-Definition at line 899 of file live555\+\_\+rtsp.\+cpp.
+Definition at line 908 of file live555\+\_\+rtsp.\+cpp.
 
 \index{live555\+\_\+rtsp.\+cpp@{live555\+\_\+rtsp.\+cpp}!live555\+\_\+rtsp\+\_\+mux\+\_\+process\+\_\+frame@{live555\+\_\+rtsp\+\_\+mux\+\_\+process\+\_\+frame}}
 \index{live555\+\_\+rtsp\+\_\+mux\+\_\+process\+\_\+frame@{live555\+\_\+rtsp\+\_\+mux\+\_\+process\+\_\+frame}!live555\+\_\+rtsp.\+cpp@{live555\+\_\+rtsp.\+cpp}}
@@ -467,7 +467,7 @@ Definition at line 899 of file live555\+\_\+rtsp.\+cpp.
 )\hspace{0.3cm}{\ttfamily [static]}}\hypertarget{live555__rtsp_8cpp_ad71374130a2220d19874d40b086b1631}{}\label{live555__rtsp_8cpp_ad71374130a2220d19874d40b086b1631}
 Implements the \hyperlink{structproc__if__s_ab67b4061f94b6f15ae40c796b6b33597}{proc\+\_\+if\+\_\+s\+::process\+\_\+frame} callback. See .\hyperlink{proc__if_8h}{proc\+\_\+if.\+h} for further details. 
 
-Definition at line 845 of file live555\+\_\+rtsp.\+cpp.
+Definition at line 854 of file live555\+\_\+rtsp.\+cpp.
 
 \index{live555\+\_\+rtsp.\+cpp@{live555\+\_\+rtsp.\+cpp}!live555\+\_\+rtsp\+\_\+mux\+\_\+rest\+\_\+get@{live555\+\_\+rtsp\+\_\+mux\+\_\+rest\+\_\+get}}
 \index{live555\+\_\+rtsp\+\_\+mux\+\_\+rest\+\_\+get@{live555\+\_\+rtsp\+\_\+mux\+\_\+rest\+\_\+get}!live555\+\_\+rtsp.\+cpp@{live555\+\_\+rtsp.\+cpp}}
@@ -480,7 +480,7 @@ Definition at line 845 of file live555\+\_\+rtsp.\+cpp.
 )\hspace{0.3cm}{\ttfamily [static]}}\hypertarget{live555__rtsp_8cpp_a79702efb465218250b0e0b47968daa19}{}\label{live555__rtsp_8cpp_a79702efb465218250b0e0b47968daa19}
 Implements the \hyperlink{structproc__if__s_a1e45b33c52b931954f7a0d8a14f0db53}{proc\+\_\+if\+\_\+s\+::rest\+\_\+get} callback. See .\hyperlink{proc__if_8h}{proc\+\_\+if.\+h} for further details. 
 
-Definition at line 1006 of file live555\+\_\+rtsp.\+cpp.
+Definition at line 1015 of file live555\+\_\+rtsp.\+cpp.
 
 \index{live555\+\_\+rtsp.\+cpp@{live555\+\_\+rtsp.\+cpp}!live555\+\_\+rtsp\+\_\+mux\+\_\+rest\+\_\+put@{live555\+\_\+rtsp\+\_\+mux\+\_\+rest\+\_\+put}}
 \index{live555\+\_\+rtsp\+\_\+mux\+\_\+rest\+\_\+put@{live555\+\_\+rtsp\+\_\+mux\+\_\+rest\+\_\+put}!live555\+\_\+rtsp.\+cpp@{live555\+\_\+rtsp.\+cpp}}
@@ -492,7 +492,7 @@ Definition at line 1006 of file live555\+\_\+rtsp.\+cpp.
 )\hspace{0.3cm}{\ttfamily [static]}}\hypertarget{live555__rtsp_8cpp_abe47b6b8febe17d311ecede4da45aea0}{}\label{live555__rtsp_8cpp_abe47b6b8febe17d311ecede4da45aea0}
 Implements the \hyperlink{structproc__if__s_acb4d2c240c52904ebd6904f54b1a9b78}{proc\+\_\+if\+\_\+s\+::rest\+\_\+put} callback. See .\hyperlink{proc__if_8h}{proc\+\_\+if.\+h} for further details. 
 
-Definition at line 964 of file live555\+\_\+rtsp.\+cpp.
+Definition at line 973 of file live555\+\_\+rtsp.\+cpp.
 
 \index{live555\+\_\+rtsp.\+cpp@{live555\+\_\+rtsp.\+cpp}!live555\+\_\+rtsp\+\_\+mux\+\_\+settings\+\_\+ctx\+\_\+deinit@{live555\+\_\+rtsp\+\_\+mux\+\_\+settings\+\_\+ctx\+\_\+deinit}}
 \index{live555\+\_\+rtsp\+\_\+mux\+\_\+settings\+\_\+ctx\+\_\+deinit@{live555\+\_\+rtsp\+\_\+mux\+\_\+settings\+\_\+ctx\+\_\+deinit}!live555\+\_\+rtsp.\+cpp@{live555\+\_\+rtsp.\+cpp}}
@@ -511,7 +511,7 @@ Release specific Live555 R\+T\+SP multiplexer settings (allocated in heap memory
 \end{DoxyParams}
 
 
-Definition at line 1251 of file live555\+\_\+rtsp.\+cpp.
+Definition at line 1260 of file live555\+\_\+rtsp.\+cpp.
 
 \index{live555\+\_\+rtsp.\+cpp@{live555\+\_\+rtsp.\+cpp}!live555\+\_\+rtsp\+\_\+mux\+\_\+settings\+\_\+ctx\+\_\+init@{live555\+\_\+rtsp\+\_\+mux\+\_\+settings\+\_\+ctx\+\_\+init}}
 \index{live555\+\_\+rtsp\+\_\+mux\+\_\+settings\+\_\+ctx\+\_\+init@{live555\+\_\+rtsp\+\_\+mux\+\_\+settings\+\_\+ctx\+\_\+init}!live555\+\_\+rtsp.\+cpp@{live555\+\_\+rtsp.\+cpp}}
@@ -533,7 +533,7 @@ Status code (S\+T\+A\+T\+\_\+\+S\+U\+C\+C\+E\+SS code in case of success, for ot
 \end{DoxyReturn}
 
 
-Definition at line 1220 of file live555\+\_\+rtsp.\+cpp.
+Definition at line 1229 of file live555\+\_\+rtsp.\+cpp.
 
 \index{live555\+\_\+rtsp.\+cpp@{live555\+\_\+rtsp.\+cpp}!setup\+Next\+Subsession@{setup\+Next\+Subsession}}
 \index{setup\+Next\+Subsession@{setup\+Next\+Subsession}!live555\+\_\+rtsp.\+cpp@{live555\+\_\+rtsp.\+cpp}}
@@ -544,7 +544,7 @@ Definition at line 1220 of file live555\+\_\+rtsp.\+cpp.
 )\hspace{0.3cm}{\ttfamily [static]}}\hypertarget{live555__rtsp_8cpp_a25d0e5450a3553a50ca44562cdae755d}{}\label{live555__rtsp_8cpp_a25d0e5450a3553a50ca44562cdae755d}
 Iterate through each stream\textquotesingle{}s \textquotesingle{}sub-\/sessions\textquotesingle{}, setting up each one. 
 
-Definition at line 2655 of file live555\+\_\+rtsp.\+cpp.
+Definition at line 2664 of file live555\+\_\+rtsp.\+cpp.
 
 \index{live555\+\_\+rtsp.\+cpp@{live555\+\_\+rtsp.\+cpp}!shutdown\+Stream@{shutdown\+Stream}}
 \index{shutdown\+Stream@{shutdown\+Stream}!live555\+\_\+rtsp.\+cpp@{live555\+\_\+rtsp.\+cpp}}
@@ -556,7 +556,7 @@ Definition at line 2655 of file live555\+\_\+rtsp.\+cpp.
 )\hspace{0.3cm}{\ttfamily [static]}}\hypertarget{live555__rtsp_8cpp_a745d51722cac48201443f303b01506c9}{}\label{live555__rtsp_8cpp_a745d51722cac48201443f303b01506c9}
 Used to shut down and close a stream (including its \char`\"{}\+R\+T\+S\+P\+Client\char`\"{} object). 
 
-Definition at line 2856 of file live555\+\_\+rtsp.\+cpp.
+Definition at line 2865 of file live555\+\_\+rtsp.\+cpp.
 
 \index{live555\+\_\+rtsp.\+cpp@{live555\+\_\+rtsp.\+cpp}!subsession\+After\+Playing@{subsession\+After\+Playing}}
 \index{subsession\+After\+Playing@{subsession\+After\+Playing}!live555\+\_\+rtsp.\+cpp@{live555\+\_\+rtsp.\+cpp}}
@@ -567,7 +567,7 @@ Definition at line 2856 of file live555\+\_\+rtsp.\+cpp.
 )\hspace{0.3cm}{\ttfamily [static]}}\hypertarget{live555__rtsp_8cpp_a48b85c08a53c246bf3b9e8353b04676b}{}\label{live555__rtsp_8cpp_a48b85c08a53c246bf3b9e8353b04676b}
 called when a stream\textquotesingle{}s sub-\/session (e.\+g., audio or video sub-\/stream) ends. 
 
-Definition at line 2803 of file live555\+\_\+rtsp.\+cpp.
+Definition at line 2812 of file live555\+\_\+rtsp.\+cpp.
 
 \index{live555\+\_\+rtsp.\+cpp@{live555\+\_\+rtsp.\+cpp}!subsession\+Bye\+Handler@{subsession\+Bye\+Handler}}
 \index{subsession\+Bye\+Handler@{subsession\+Bye\+Handler}!live555\+\_\+rtsp.\+cpp@{live555\+\_\+rtsp.\+cpp}}
@@ -578,7 +578,7 @@ Definition at line 2803 of file live555\+\_\+rtsp.\+cpp.
 )\hspace{0.3cm}{\ttfamily [static]}}\hypertarget{live555__rtsp_8cpp_ac3ec7faed4d59081b32fbd1dc93d2a68}{}\label{live555__rtsp_8cpp_ac3ec7faed4d59081b32fbd1dc93d2a68}
 Called when a R\+T\+CP \char`\"{}\+B\+Y\+E\char`\"{} is received for a sub-\/session. 
 
-Definition at line 2833 of file live555\+\_\+rtsp.\+cpp.
+Definition at line 2842 of file live555\+\_\+rtsp.\+cpp.
 
 
 
@@ -591,9 +591,12 @@ Definition at line 2833 of file live555\+\_\+rtsp.\+cpp.
 =
 \{
     \textcolor{stringliteral}{"live555\_rtsp\_dmux"}, \textcolor{stringliteral}{"demultiplexer"}, \textcolor{stringliteral}{"application/octet-stream"},
-    (uint64\_t)PROC\_FEATURE\_RD,
+    (uint64\_t)0, 
     \hyperlink{live555__rtsp_8cpp_a47ff243b0d13dd2e2fa45e543957d4e5}{live555\_rtsp\_dmux\_open},
     \hyperlink{live555__rtsp_8cpp_a6725a20c83725a3080c2eca916800dab}{live555\_rtsp\_dmux\_close},
+    NULL, 
+    NULL, 
+    proc\_recv\_frame\_default1,
     \hyperlink{live555__rtsp_8cpp_abd61654410d5c9ce8d3d7fc52430d8be}{live555\_rtsp\_dmux\_rest\_put},
     \hyperlink{live555__rtsp_8cpp_a1dff06c81ab4c1f15bdc768ffb06fe51}{live555\_rtsp\_dmux\_rest\_get},
     \hyperlink{live555__rtsp_8cpp_a7424e763a4f50f3b4563f86b28569f9d}{live555\_rtsp\_dmux\_process\_frame},
@@ -605,7 +608,7 @@ Definition at line 2833 of file live555\+\_\+rtsp.\+cpp.
 \end{DoxyCode}
 Processor interface implementing the wrapper of the live555 R\+T\+SP de-\/multiplexer. 
 
-Definition at line 581 of file live555\+\_\+rtsp.\+cpp.
+Definition at line 587 of file live555\+\_\+rtsp.\+cpp.
 
 \index{live555\+\_\+rtsp.\+cpp@{live555\+\_\+rtsp.\+cpp}!proc\+\_\+if\+\_\+live555\+\_\+rtsp\+\_\+es\+\_\+mux@{proc\+\_\+if\+\_\+live555\+\_\+rtsp\+\_\+es\+\_\+mux}}
 \index{proc\+\_\+if\+\_\+live555\+\_\+rtsp\+\_\+es\+\_\+mux@{proc\+\_\+if\+\_\+live555\+\_\+rtsp\+\_\+es\+\_\+mux}!live555\+\_\+rtsp.\+cpp@{live555\+\_\+rtsp.\+cpp}}
@@ -615,9 +618,12 @@ Definition at line 581 of file live555\+\_\+rtsp.\+cpp.
 =
 \{
     \textcolor{stringliteral}{"live555\_rtsp\_es\_mux"}, \textcolor{stringliteral}{"multiplexer"}, \textcolor{stringliteral}{"application/octet-stream"},
-    (uint64\_t)PROC\_FEATURE\_WR,
+    (uint64\_t)0, 
     live555\_rtsp\_es\_mux\_open,
     \hyperlink{live555__rtsp_8cpp_a5ecc6f5de6844803a83fab12a13476a2}{live555\_rtsp\_es\_mux\_close},
+    proc\_send\_frame\_default1,
+    NULL, 
+    NULL, 
     NULL, 
     \hyperlink{live555__rtsp_8cpp_a56e14bf531cf71bcc507f3f19d1f6d26}{live555\_rtsp\_es\_mux\_rest\_get},
     \hyperlink{live555__rtsp_8cpp_abb290dc91efdc5ecf11447a219348321}{live555\_rtsp\_es\_mux\_process\_frame},
@@ -629,7 +635,7 @@ Definition at line 581 of file live555\+\_\+rtsp.\+cpp.
 \end{DoxyCode}
 
 
-Definition at line 566 of file live555\+\_\+rtsp.\+cpp.
+Definition at line 569 of file live555\+\_\+rtsp.\+cpp.
 
 \index{live555\+\_\+rtsp.\+cpp@{live555\+\_\+rtsp.\+cpp}!proc\+\_\+if\+\_\+live555\+\_\+rtsp\+\_\+mux@{proc\+\_\+if\+\_\+live555\+\_\+rtsp\+\_\+mux}}
 \index{proc\+\_\+if\+\_\+live555\+\_\+rtsp\+\_\+mux@{proc\+\_\+if\+\_\+live555\+\_\+rtsp\+\_\+mux}!live555\+\_\+rtsp.\+cpp@{live555\+\_\+rtsp.\+cpp}}
@@ -639,9 +645,12 @@ Definition at line 566 of file live555\+\_\+rtsp.\+cpp.
 =
 \{
     \textcolor{stringliteral}{"live555\_rtsp\_mux"}, \textcolor{stringliteral}{"multiplexer"}, \textcolor{stringliteral}{"application/octet-stream"},
-    (uint64\_t)PROC\_FEATURE\_WR,
+    (uint64\_t)0, 
     \hyperlink{live555__rtsp_8cpp_a2f593befac270f3c0f87fd59306c9a07}{live555\_rtsp\_mux\_open},
     \hyperlink{live555__rtsp_8cpp_ae36c82c14b171460aad0cdf9b167c5b0}{live555\_rtsp\_mux\_close},
+    proc\_send\_frame\_default1,
+    NULL, 
+    NULL, 
     \hyperlink{live555__rtsp_8cpp_abe47b6b8febe17d311ecede4da45aea0}{live555\_rtsp\_mux\_rest\_put},
     \hyperlink{live555__rtsp_8cpp_a79702efb465218250b0e0b47968daa19}{live555\_rtsp\_mux\_rest\_get},
     \hyperlink{live555__rtsp_8cpp_ad71374130a2220d19874d40b086b1631}{live555\_rtsp\_mux\_process\_frame},
