--- a/docs/latex/proc__if_8h.tex
+++ b/docs/latex/proc__if_8h.tex
@@ -41,19 +41,13 @@ struct \hyperlink{structproc__if__s}{proc\+\_\+if\+\_\+s}
 \#define {\bfseries P\+R\+O\+C\+\_\+\+F\+R\+A\+M\+E\+\_\+\+N\+U\+M\+\_\+\+D\+A\+T\+A\+\_\+\+P\+O\+I\+N\+T\+E\+RS}~8\hypertarget{proc__if_8h_a4c63c7b6107f1568e9fbbddfd79db229}{}\label{proc__if_8h_a4c63c7b6107f1568e9fbbddfd79db229}
 
 \item 
-\#define {\bfseries P\+R\+O\+C\+\_\+\+F\+E\+A\+T\+U\+R\+E\+\_\+\+RD}~1\hypertarget{proc__if_8h_a6730c7b1e614accf193065dd932f99b7}{}\label{proc__if_8h_a6730c7b1e614accf193065dd932f99b7}
+\#define {\bfseries P\+R\+O\+C\+\_\+\+F\+E\+A\+T\+U\+R\+E\+\_\+\+B\+I\+T\+R\+A\+TE}~1\hypertarget{proc__if_8h_a12e848b4a1da8757ea8fecb9e3d832e2}{}\label{proc__if_8h_a12e848b4a1da8757ea8fecb9e3d832e2}
 
 \item 
-\#define {\bfseries P\+R\+O\+C\+\_\+\+F\+E\+A\+T\+U\+R\+E\+\_\+\+WR}~2\hypertarget{proc__if_8h_a706d901f6f6ce258f57c52a3e6eb39c9}{}\label{proc__if_8h_a706d901f6f6ce258f57c52a3e6eb39c9}
+\#define {\bfseries P\+R\+O\+C\+\_\+\+F\+E\+A\+T\+U\+R\+E\+\_\+\+R\+E\+G\+I\+S\+T\+E\+R\+\_\+\+P\+TS}~2\hypertarget{proc__if_8h_a1cf403ec62af97c15366f29094b7a7c3}{}\label{proc__if_8h_a1cf403ec62af97c15366f29094b7a7c3}
 
 \item 
-\#define {\bfseries P\+R\+O\+C\+\_\+\+F\+E\+A\+T\+U\+R\+E\+\_\+\+I\+O\+S\+T\+A\+TS}~4\hypertarget{proc__if_8h_a73d3ecacb06b3b614b2ff58059b9fa99}{}\label{proc__if_8h_a73d3ecacb06b3b614b2ff58059b9fa99}
-
-\item 
-\#define {\bfseries P\+R\+O\+C\+\_\+\+F\+E\+A\+T\+U\+R\+E\+\_\+\+I\+P\+U\+T\+\_\+\+P\+TS}~8\hypertarget{proc__if_8h_a2cc27ef72f36e04adbd61ac041951699}{}\label{proc__if_8h_a2cc27ef72f36e04adbd61ac041951699}
-
-\item 
-\#define {\bfseries P\+R\+O\+C\+\_\+\+F\+E\+A\+T\+U\+R\+E\+\_\+\+L\+A\+T\+S\+T\+A\+TS}~16\hypertarget{proc__if_8h_a33f9baf3ca25b198ae62fcc662c9d94c}{}\label{proc__if_8h_a33f9baf3ca25b198ae62fcc662c9d94c}
+\#define {\bfseries P\+R\+O\+C\+\_\+\+F\+E\+A\+T\+U\+R\+E\+\_\+\+L\+A\+T\+E\+N\+CY}~4\hypertarget{proc__if_8h_ad4fd2def0bdb848ae5ac6780181d1bd6}{}\label{proc__if_8h_ad4fd2def0bdb848ae5ac6780181d1bd6}
 
 \end{DoxyCompactItemize}
 \subsection*{Typedefs}
