--- a/docs/latex/structproc__ctx__s.tex
+++ b/docs/latex/structproc__ctx__s.tex
@@ -37,12 +37,12 @@ const void $\ast$($\ast$ \hyperlink{structproc__ctx__s_a1149ce1c28aae8e553c85125
 {\bf }\par
 \begin{DoxyCompactItemize}
 \item 
-volatile uint32\+\_\+t \hyperlink{structproc__ctx__s_a63e59dc7c4a361ca2b52e2354f51c33a}{acc\+\_\+io\+\_\+bits} \mbox{[}P\+R\+O\+C\+\_\+\+I\+O\+\_\+\+N\+UM\mbox{]}
+volatile uint32\+\_\+t \hyperlink{structproc__ctx__s_a31bad437eed5d81c08a01538416c3639}{bitrate} \mbox{[}P\+R\+O\+C\+\_\+\+I\+O\+\_\+\+N\+UM\mbox{]}
 \item 
-pthread\+\_\+mutex\+\_\+t {\bfseries acc\+\_\+io\+\_\+bits\+\_\+mutex} \mbox{[}P\+R\+O\+C\+\_\+\+I\+O\+\_\+\+N\+UM\mbox{]}\hypertarget{structproc__ctx__s_a486d5806453d8171e298c449c6391c1d}{}\label{structproc__ctx__s_a486d5806453d8171e298c449c6391c1d}
+volatile uint32\+\_\+t {\bfseries acc\+\_\+io\+\_\+bits} \mbox{[}P\+R\+O\+C\+\_\+\+I\+O\+\_\+\+N\+UM\mbox{]}\hypertarget{structproc__ctx__s_a63e59dc7c4a361ca2b52e2354f51c33a}{}\label{structproc__ctx__s_a63e59dc7c4a361ca2b52e2354f51c33a}
 
 \item 
-volatile uint32\+\_\+t {\bfseries bitrate} \mbox{[}P\+R\+O\+C\+\_\+\+I\+O\+\_\+\+N\+UM\mbox{]}\hypertarget{structproc__ctx__s_a31bad437eed5d81c08a01538416c3639}{}\label{structproc__ctx__s_a31bad437eed5d81c08a01538416c3639}
+pthread\+\_\+mutex\+\_\+t {\bfseries acc\+\_\+io\+\_\+bits\+\_\+mutex} \mbox{[}P\+R\+O\+C\+\_\+\+I\+O\+\_\+\+N\+UM\mbox{]}\hypertarget{structproc__ctx__s_a486d5806453d8171e298c449c6391c1d}{}\label{structproc__ctx__s_a486d5806453d8171e298c449c6391c1d}
 
 \end{DoxyCompactItemize}
 
@@ -59,21 +59,21 @@ volatile int {\bfseries iput\+\_\+pts\+\_\+array\+\_\+idx}\hypertarget{structpro
 {\bf }\par
 \begin{DoxyCompactItemize}
 \item 
-volatile int64\+\_\+t \hyperlink{structproc__ctx__s_a58e7e20b896b1d74789f2fe9b971fd09}{acc\+\_\+latency\+\_\+nsec}
-\item 
-volatile int {\bfseries acc\+\_\+latency\+\_\+cnt}\hypertarget{structproc__ctx__s_a3dea6eaed00798ceac47451e5923dc41}{}\label{structproc__ctx__s_a3dea6eaed00798ceac47451e5923dc41}
-
-\item 
-pthread\+\_\+mutex\+\_\+t {\bfseries latency\+\_\+mutex}\hypertarget{structproc__ctx__s_ac9705b88786b067a17f84178d52bbce1}{}\label{structproc__ctx__s_ac9705b88786b067a17f84178d52bbce1}
-
-\item 
-volatile int64\+\_\+t {\bfseries latency\+\_\+avg\+\_\+usec}\hypertarget{structproc__ctx__s_acdd3cc73dadcf7eb7c70c6e5ffb53293}{}\label{structproc__ctx__s_acdd3cc73dadcf7eb7c70c6e5ffb53293}
-
+volatile int64\+\_\+t \hyperlink{structproc__ctx__s_acdd3cc73dadcf7eb7c70c6e5ffb53293}{latency\+\_\+avg\+\_\+usec}
 \item 
 volatile int64\+\_\+t {\bfseries latency\+\_\+max\+\_\+usec}\hypertarget{structproc__ctx__s_a5cbe8711ddd1b36a2b203cfc8ef1b01f}{}\label{structproc__ctx__s_a5cbe8711ddd1b36a2b203cfc8ef1b01f}
 
 \item 
 volatile int64\+\_\+t {\bfseries latency\+\_\+min\+\_\+usec}\hypertarget{structproc__ctx__s_a0546eedba9aabcc7edc958f1ccc8cd42}{}\label{structproc__ctx__s_a0546eedba9aabcc7edc958f1ccc8cd42}
+
+\item 
+volatile int64\+\_\+t {\bfseries acc\+\_\+latency\+\_\+nsec}\hypertarget{structproc__ctx__s_a58e7e20b896b1d74789f2fe9b971fd09}{}\label{structproc__ctx__s_a58e7e20b896b1d74789f2fe9b971fd09}
+
+\item 
+volatile int {\bfseries acc\+\_\+latency\+\_\+cnt}\hypertarget{structproc__ctx__s_a3dea6eaed00798ceac47451e5923dc41}{}\label{structproc__ctx__s_a3dea6eaed00798ceac47451e5923dc41}
+
+\item 
+pthread\+\_\+mutex\+\_\+t {\bfseries latency\+\_\+mutex}\hypertarget{structproc__ctx__s_ac9705b88786b067a17f84178d52bbce1}{}\label{structproc__ctx__s_ac9705b88786b067a17f84178d52bbce1}
 
 \end{DoxyCompactItemize}
 
@@ -87,9 +87,16 @@ Definition at line 84 of file proc.\+h.
 
 
 \subsection{Member Data Documentation}
-\index{proc\+\_\+ctx\+\_\+s@{proc\+\_\+ctx\+\_\+s}!acc\+\_\+io\+\_\+bits@{acc\+\_\+io\+\_\+bits}}
-\index{acc\+\_\+io\+\_\+bits@{acc\+\_\+io\+\_\+bits}!proc\+\_\+ctx\+\_\+s@{proc\+\_\+ctx\+\_\+s}}
-\subsubsection[{\texorpdfstring{acc\+\_\+io\+\_\+bits}{acc_io_bits}}]{\setlength{\rightskip}{0pt plus 5cm}volatile uint32\+\_\+t proc\+\_\+ctx\+\_\+s\+::acc\+\_\+io\+\_\+bits\mbox{[}P\+R\+O\+C\+\_\+\+I\+O\+\_\+\+N\+UM\mbox{]}}\hypertarget{structproc__ctx__s_a63e59dc7c4a361ca2b52e2354f51c33a}{}\label{structproc__ctx__s_a63e59dc7c4a361ca2b52e2354f51c33a}
+\index{proc\+\_\+ctx\+\_\+s@{proc\+\_\+ctx\+\_\+s}!api\+\_\+mutex@{api\+\_\+mutex}}
+\index{api\+\_\+mutex@{api\+\_\+mutex}!proc\+\_\+ctx\+\_\+s@{proc\+\_\+ctx\+\_\+s}}
+\subsubsection[{\texorpdfstring{api\+\_\+mutex}{api_mutex}}]{\setlength{\rightskip}{0pt plus 5cm}pthread\+\_\+mutex\+\_\+t proc\+\_\+ctx\+\_\+s\+::api\+\_\+mutex}\hypertarget{structproc__ctx__s_aea90c57d9b0a303b638a51ce7efa9a1e}{}\label{structproc__ctx__s_aea90c57d9b0a303b638a51ce7efa9a1e}
+Processor A\+PI mutual exclusion lock. 
+
+Definition at line 98 of file proc.\+h.
+
+\index{proc\+\_\+ctx\+\_\+s@{proc\+\_\+ctx\+\_\+s}!bitrate@{bitrate}}
+\index{bitrate@{bitrate}!proc\+\_\+ctx\+\_\+s@{proc\+\_\+ctx\+\_\+s}}
+\subsubsection[{\texorpdfstring{bitrate}{bitrate}}]{\setlength{\rightskip}{0pt plus 5cm}volatile uint32\+\_\+t proc\+\_\+ctx\+\_\+s\+::bitrate\mbox{[}P\+R\+O\+C\+\_\+\+I\+O\+\_\+\+N\+UM\mbox{]}}\hypertarget{structproc__ctx__s_a31bad437eed5d81c08a01538416c3639}{}\label{structproc__ctx__s_a31bad437eed5d81c08a01538416c3639}
 Bitrate measurement related variables\+:
 \begin{DoxyItemize}
 \item Input/output bitrate statistics \mbox{[}bits per second\mbox{]};
@@ -98,25 +105,6 @@ Bitrate measurement related variables\+:
 \end{DoxyItemize}
 
 Definition at line 120 of file proc.\+h.
-
-\index{proc\+\_\+ctx\+\_\+s@{proc\+\_\+ctx\+\_\+s}!acc\+\_\+latency\+\_\+nsec@{acc\+\_\+latency\+\_\+nsec}}
-\index{acc\+\_\+latency\+\_\+nsec@{acc\+\_\+latency\+\_\+nsec}!proc\+\_\+ctx\+\_\+s@{proc\+\_\+ctx\+\_\+s}}
-\subsubsection[{\texorpdfstring{acc\+\_\+latency\+\_\+nsec}{acc_latency_nsec}}]{\setlength{\rightskip}{0pt plus 5cm}volatile int64\+\_\+t proc\+\_\+ctx\+\_\+s\+::acc\+\_\+latency\+\_\+nsec}\hypertarget{structproc__ctx__s_a58e7e20b896b1d74789f2fe9b971fd09}{}\label{structproc__ctx__s_a58e7e20b896b1d74789f2fe9b971fd09}
-Latency measurement related variables.
-\begin{DoxyItemize}
-\item Accumulated latency value (addition of individual frame latencies);
-\item Addition counter (number of values that are added, used to compute average value);
-\item Critical region to acquire or modify these field. 
-\end{DoxyItemize}
-
-Definition at line 144 of file proc.\+h.
-
-\index{proc\+\_\+ctx\+\_\+s@{proc\+\_\+ctx\+\_\+s}!api\+\_\+mutex@{api\+\_\+mutex}}
-\index{api\+\_\+mutex@{api\+\_\+mutex}!proc\+\_\+ctx\+\_\+s@{proc\+\_\+ctx\+\_\+s}}
-\subsubsection[{\texorpdfstring{api\+\_\+mutex}{api_mutex}}]{\setlength{\rightskip}{0pt plus 5cm}pthread\+\_\+mutex\+\_\+t proc\+\_\+ctx\+\_\+s\+::api\+\_\+mutex}\hypertarget{structproc__ctx__s_aea90c57d9b0a303b638a51ce7efa9a1e}{}\label{structproc__ctx__s_aea90c57d9b0a303b638a51ce7efa9a1e}
-Processor A\+PI mutual exclusion lock. 
-
-Definition at line 98 of file proc.\+h.
 
 \index{proc\+\_\+ctx\+\_\+s@{proc\+\_\+ctx\+\_\+s}!fair\+\_\+lock\+\_\+io\+\_\+array@{fair\+\_\+lock\+\_\+io\+\_\+array}}
 \index{fair\+\_\+lock\+\_\+io\+\_\+array@{fair\+\_\+lock\+\_\+io\+\_\+array}!proc\+\_\+ctx\+\_\+s@{proc\+\_\+ctx\+\_\+s}}
@@ -137,7 +125,20 @@ Definition at line 106 of file proc.\+h.
 \subsubsection[{\texorpdfstring{flag\+\_\+exit}{flag_exit}}]{\setlength{\rightskip}{0pt plus 5cm}volatile int proc\+\_\+ctx\+\_\+s\+::flag\+\_\+exit}\hypertarget{structproc__ctx__s_a86a21b28f6c41f7a9a4cc9586f782d68}{}\label{structproc__ctx__s_a86a21b28f6c41f7a9a4cc9586f782d68}
 Processing thread exit indicator. Set to non-\/zero to signal processing to abort immediately. 
 
-Definition at line 155 of file proc.\+h.
+Definition at line 158 of file proc.\+h.
+
+\index{proc\+\_\+ctx\+\_\+s@{proc\+\_\+ctx\+\_\+s}!latency\+\_\+avg\+\_\+usec@{latency\+\_\+avg\+\_\+usec}}
+\index{latency\+\_\+avg\+\_\+usec@{latency\+\_\+avg\+\_\+usec}!proc\+\_\+ctx\+\_\+s@{proc\+\_\+ctx\+\_\+s}}
+\subsubsection[{\texorpdfstring{latency\+\_\+avg\+\_\+usec}{latency_avg_usec}}]{\setlength{\rightskip}{0pt plus 5cm}volatile int64\+\_\+t proc\+\_\+ctx\+\_\+s\+::latency\+\_\+avg\+\_\+usec}\hypertarget{structproc__ctx__s_acdd3cc73dadcf7eb7c70c6e5ffb53293}{}\label{structproc__ctx__s_acdd3cc73dadcf7eb7c70c6e5ffb53293}
+Latency measurement related variables.
+\begin{DoxyItemize}
+\item Average latency statistic \mbox{[}microseconds/second\mbox{]} (average value computed in a one-\/second period);
+\item Accumulated latency value (addition of individual frame latencies in the average period);
+\item Average counter (number of values that are added, used to compute average value);
+\item Critical region to acquire or modify these field. 
+\end{DoxyItemize}
+
+Definition at line 147 of file proc.\+h.
 
 \index{proc\+\_\+ctx\+\_\+s@{proc\+\_\+ctx\+\_\+s}!log\+\_\+ctx@{log\+\_\+ctx}}
 \index{log\+\_\+ctx@{log\+\_\+ctx}!proc\+\_\+ctx\+\_\+s@{proc\+\_\+ctx\+\_\+s}}
@@ -165,14 +166,14 @@ Definition at line 94 of file proc.\+h.
 \subsubsection[{\texorpdfstring{proc\+\_\+thread}{proc_thread}}]{\setlength{\rightskip}{0pt plus 5cm}pthread\+\_\+t proc\+\_\+ctx\+\_\+s\+::proc\+\_\+thread}\hypertarget{structproc__ctx__s_a09ad60355584215cfeb4d5589ee390b9}{}\label{structproc__ctx__s_a09ad60355584215cfeb4d5589ee390b9}
 Processing thread. 
 
-Definition at line 159 of file proc.\+h.
+Definition at line 162 of file proc.\+h.
 
 \index{proc\+\_\+ctx\+\_\+s@{proc\+\_\+ctx\+\_\+s}!start\+\_\+routine@{start\+\_\+routine}}
 \index{start\+\_\+routine@{start\+\_\+routine}!proc\+\_\+ctx\+\_\+s@{proc\+\_\+ctx\+\_\+s}}
 \subsubsection[{\texorpdfstring{start\+\_\+routine}{start_routine}}]{\setlength{\rightskip}{0pt plus 5cm}const void$\ast$($\ast$ proc\+\_\+ctx\+\_\+s\+::start\+\_\+routine) (void $\ast$)}\hypertarget{structproc__ctx__s_a1149ce1c28aae8e553c85125e30be661}{}\label{structproc__ctx__s_a1149ce1c28aae8e553c85125e30be661}
 Processing thread function reference. 
 
-Definition at line 163 of file proc.\+h.
+Definition at line 166 of file proc.\+h.
 
 
 
