--- a/docs/latex/proc_8h.tex
+++ b/docs/latex/proc_8h.tex
@@ -86,6 +86,12 @@ int \hyperlink{proc_8h_a0367a65712bcd2e762ec1e9e3035cb3b}{proc\+\_\+opt} (\hyper
 \item 
 int \hyperlink{proc_8h_a720ee51d86625b42b09f508a13977f37}{proc\+\_\+vopt} (\hyperlink{proc_8h_ae264f89be30fc03f5053bc16d58cba05}{proc\+\_\+ctx\+\_\+t} $\ast$proc\+\_\+ctx, const char $\ast$tag, va\+\_\+list arg)
 \item 
+int {\bfseries proc\+\_\+send\+\_\+frame\+\_\+default1} (\hyperlink{proc_8h_ae264f89be30fc03f5053bc16d58cba05}{proc\+\_\+ctx\+\_\+t} $\ast$proc\+\_\+ctx, const \hyperlink{structproc__frame__ctx__s}{proc\+\_\+frame\+\_\+ctx\+\_\+t} $\ast$proc\+\_\+frame\+\_\+ctx)\hypertarget{proc_8h_ab4eb8ffc342262ec8b748746fecae348}{}\label{proc_8h_ab4eb8ffc342262ec8b748746fecae348}
+
+\item 
+int {\bfseries proc\+\_\+recv\+\_\+frame\+\_\+default1} (\hyperlink{proc_8h_ae264f89be30fc03f5053bc16d58cba05}{proc\+\_\+ctx\+\_\+t} $\ast$proc\+\_\+ctx, \hyperlink{structproc__frame__ctx__s}{proc\+\_\+frame\+\_\+ctx\+\_\+t} $\ast$$\ast$ref\+\_\+proc\+\_\+frame\+\_\+ctx)\hypertarget{proc_8h_a8ec368fc617b0066b9fab8a788ec92db}{}\label{proc_8h_a8ec368fc617b0066b9fab8a788ec92db}
+
+\item 
 void {\bfseries proc\+\_\+acc\+\_\+latency\+\_\+measure} (\hyperlink{proc_8h_ae264f89be30fc03f5053bc16d58cba05}{proc\+\_\+ctx\+\_\+t} $\ast$proc\+\_\+ctx, const int64\+\_\+t oput\+\_\+frame\+\_\+pts)\hypertarget{proc_8h_a0b8d892a67c4ba670cedc9a569f8387b}{}\label{proc_8h_a0b8d892a67c4ba670cedc9a569f8387b}
 
 \end{DoxyCompactItemize}
@@ -256,7 +262,7 @@ Tag \char`\"{}\+P\+R\+O\+C\+\_\+\+P\+U\+T\char`\"{}\+: ~\newline
 
 \end{DoxyItemize}
 
-Definition at line 345 of file proc.\+c.
+Definition at line 334 of file proc.\+c.
 
 \index{proc.\+h@{proc.\+h}!proc\+\_\+recv\+\_\+frame@{proc\+\_\+recv\+\_\+frame}}
 \index{proc\+\_\+recv\+\_\+frame@{proc\+\_\+recv\+\_\+frame}!proc.\+h@{proc.\+h}}
@@ -266,7 +272,7 @@ Definition at line 345 of file proc.\+c.
 \item[{{\bf proc\+\_\+frame\+\_\+ctx\+\_\+t} $\ast$$\ast$}]{ref\+\_\+proc\+\_\+frame\+\_\+ctx}
 \end{DoxyParamCaption}
 )}\hypertarget{proc_8h_a9cfe4d96cd6581d309e3bf2b1821bbb6}{}\label{proc_8h_a9cfe4d96cd6581d309e3bf2b1821bbb6}
-Get new processed frame of data from the processor\textquotesingle{}s output F\+I\+FO buffer. Unless unblocked (see processor options \textquotesingle{}\hyperlink{proc_8h_a0367a65712bcd2e762ec1e9e3035cb3b}{proc\+\_\+opt()}\textquotesingle{}), this function blocks until a new frame is available to be read from the processor\textquotesingle{}s output F\+I\+FO. This function is thread-\/safe and can be called concurrently. 
+Get new processed frame of data from the processor\textquotesingle{}s output buffer. Unless unblocked (see processor options \textquotesingle{}\hyperlink{proc_8h_a0367a65712bcd2e762ec1e9e3035cb3b}{proc\+\_\+opt()}\textquotesingle{}), this function blocks until a new frame is available to be read from the processor\textquotesingle{}s output buffer. This function is thread-\/safe and can be called concurrently. 
 \begin{DoxyParams}{Parameters}
 {\em proc\+\_\+ctx} & Pointer to the processor (P\+R\+OC) context structure obtained in a previous call to the \textquotesingle{}\hyperlink{proc_8h_a903e30d67b3e65f0711a87945be97cc4}{proc\+\_\+open()}\textquotesingle{} function. \\
 \hline
@@ -278,7 +284,7 @@ Status code (S\+T\+A\+T\+\_\+\+S\+U\+C\+C\+E\+SS code in case of success, for ot
 \end{DoxyReturn}
 
 
-Definition at line 279 of file proc.\+c.
+Definition at line 289 of file proc.\+c.
 
 \index{proc.\+h@{proc.\+h}!proc\+\_\+send\+\_\+frame@{proc\+\_\+send\+\_\+frame}}
 \index{proc\+\_\+send\+\_\+frame@{proc\+\_\+send\+\_\+frame}!proc.\+h@{proc.\+h}}
@@ -288,11 +294,11 @@ Definition at line 279 of file proc.\+c.
 \item[{const {\bf proc\+\_\+frame\+\_\+ctx\+\_\+t} $\ast$}]{proc\+\_\+frame\+\_\+ctx}
 \end{DoxyParamCaption}
 )}\hypertarget{proc_8h_a4aa53aea57e2193cedf38b7e2003fac1}{}\label{proc_8h_a4aa53aea57e2193cedf38b7e2003fac1}
-Put new frame of data to be processed in the processor\textquotesingle{}s input F\+I\+FO buffer. Unless unblocked (see processor options \textquotesingle{}\hyperlink{proc_8h_a0367a65712bcd2e762ec1e9e3035cb3b}{proc\+\_\+opt()}\textquotesingle{}), this function blocks until a slot is available to be able to push the new frame into the processor\textquotesingle{}s input F\+I\+FO. This function is thread-\/safe and can be called concurrently. 
+Put new frame of data to be processed in the processor\textquotesingle{}s input buffer. Unless unblocked (see processor options \textquotesingle{}\hyperlink{proc_8h_a0367a65712bcd2e762ec1e9e3035cb3b}{proc\+\_\+opt()}\textquotesingle{}), this function blocks until a slot is available to be able to push the new frame into the processor\textquotesingle{}s input buffer. This function is thread-\/safe and can be called concurrently. 
 \begin{DoxyParams}{Parameters}
 {\em proc\+\_\+ctx} & Pointer to the processor (P\+R\+OC) context structure obtained in a previous call to the \textquotesingle{}\hyperlink{proc_8h_a903e30d67b3e65f0711a87945be97cc4}{proc\+\_\+open()}\textquotesingle{} function. \\
 \hline
-{\em proc\+\_\+frame\+\_\+ctx} & Pointer to the structure characterizing the input frame to be processed. The frame is duplicated and inserted in the F\+I\+FO buffer. \\
+{\em proc\+\_\+frame\+\_\+ctx} & Pointer to the structure characterizing the input frame to be processed. The frame is duplicated and inserted in the input buffer. \\
 \hline
 \end{DoxyParams}
 \begin{DoxyReturn}{Returns}
@@ -313,5 +319,5 @@ Definition at line 253 of file proc.\+c.
 )}\hypertarget{proc_8h_a720ee51d86625b42b09f508a13977f37}{}\label{proc_8h_a720ee51d86625b42b09f508a13977f37}
 The function \textquotesingle{}\hyperlink{proc_8h_a720ee51d86625b42b09f508a13977f37}{proc\+\_\+vopt()}\textquotesingle{} is the same as \hyperlink{proc_8h_a0367a65712bcd2e762ec1e9e3035cb3b}{proc\+\_\+opt()} except that it is called with a va\+\_\+list instead of a variable number of arguments. This function does not call the va\+\_\+end macro. Because it invoke the va\+\_\+arg macro, the value of the argument pointer is undefined after the call. 
 
-Definition at line 359 of file proc.\+c.
+Definition at line 348 of file proc.\+c.
 
