--- a/docs/latex/structproc__if__s.tex
+++ b/docs/latex/structproc__if__s.tex
@@ -28,6 +28,13 @@ uint64\+\_\+t \hyperlink{structproc__if__s_a657d976a32c34bff11070599b11c2dd7}{fl
 \item 
 void($\ast$ \hyperlink{structproc__if__s_af5971ac1d09d1c6ec3508c36fb286c19}{close} )(\hyperlink{proc_8h_ae264f89be30fc03f5053bc16d58cba05}{proc\+\_\+ctx\+\_\+t} $\ast$$\ast$ref\+\_\+proc\+\_\+ctx)
 \item 
+int($\ast$ \hyperlink{structproc__if__s_a0393cc5e598e19951d447a926c364e3f}{send\+\_\+frame} )(\hyperlink{proc_8h_ae264f89be30fc03f5053bc16d58cba05}{proc\+\_\+ctx\+\_\+t} $\ast$proc\+\_\+ctx, const \hyperlink{structproc__frame__ctx__s}{proc\+\_\+frame\+\_\+ctx\+\_\+t} $\ast$proc\+\_\+frame\+\_\+ctx)
+\item 
+int($\ast$ {\bfseries send\+\_\+frame\+\_\+nodup} )(\hyperlink{proc_8h_ae264f89be30fc03f5053bc16d58cba05}{proc\+\_\+ctx\+\_\+t} $\ast$proc\+\_\+ctx, \hyperlink{structproc__frame__ctx__s}{proc\+\_\+frame\+\_\+ctx\+\_\+t} $\ast$$\ast$ref\+\_\+proc\+\_\+frame\+\_\+ctx)\hypertarget{structproc__if__s_af460a3b26b0717140cc08014b6c63191}{}\label{structproc__if__s_af460a3b26b0717140cc08014b6c63191}
+
+\item 
+int($\ast$ \hyperlink{structproc__if__s_a43115b2b1fa63fbfca191c18f28f2fea}{recv\+\_\+frame} )(\hyperlink{proc_8h_ae264f89be30fc03f5053bc16d58cba05}{proc\+\_\+ctx\+\_\+t} $\ast$proc\+\_\+ctx, \hyperlink{structproc__frame__ctx__s}{proc\+\_\+frame\+\_\+ctx\+\_\+t} $\ast$$\ast$ref\+\_\+proc\+\_\+frame\+\_\+ctx)
+\item 
 int($\ast$ \hyperlink{structproc__if__s_acb4d2c240c52904ebd6904f54b1a9b78}{rest\+\_\+put} )(\hyperlink{proc_8h_ae264f89be30fc03f5053bc16d58cba05}{proc\+\_\+ctx\+\_\+t} $\ast$proc\+\_\+ctx, const char $\ast$str)
 \item 
 int($\ast$ \hyperlink{structproc__if__s_a1e45b33c52b931954f7a0d8a14f0db53}{rest\+\_\+get} )(\hyperlink{proc_8h_ae264f89be30fc03f5053bc16d58cba05}{proc\+\_\+ctx\+\_\+t} $\ast$proc\+\_\+ctx, const \hyperlink{proc__if_8h_a9bea3dae53a91f2a3e3a459d1d3e22b3}{proc\+\_\+if\+\_\+rest\+\_\+fmt\+\_\+t} rest\+\_\+fmt, void $\ast$$\ast$ref\+\_\+reponse)
@@ -62,14 +69,14 @@ Ends processing thread, de-\/initialize and release the processor (P\+R\+OC) con
 \end{DoxyParams}
 
 
-Definition at line 215 of file proc\+\_\+if.\+h.
+Definition at line 216 of file proc\+\_\+if.\+h.
 
 \index{proc\+\_\+if\+\_\+s@{proc\+\_\+if\+\_\+s}!flag\+\_\+proc\+\_\+features@{flag\+\_\+proc\+\_\+features}}
 \index{flag\+\_\+proc\+\_\+features@{flag\+\_\+proc\+\_\+features}!proc\+\_\+if\+\_\+s@{proc\+\_\+if\+\_\+s}}
 \subsubsection[{\texorpdfstring{flag\+\_\+proc\+\_\+features}{flag_proc_features}}]{\setlength{\rightskip}{0pt plus 5cm}uint64\+\_\+t proc\+\_\+if\+\_\+s\+::flag\+\_\+proc\+\_\+features}\hypertarget{structproc__if__s_a657d976a32c34bff11070599b11c2dd7}{}\label{structproc__if__s_a657d976a32c34bff11070599b11c2dd7}
 Processor features flags. 
 
-Definition at line 186 of file proc\+\_\+if.\+h.
+Definition at line 189 of file proc\+\_\+if.\+h.
 
 \index{proc\+\_\+if\+\_\+s@{proc\+\_\+if\+\_\+s}!iput\+\_\+fifo\+\_\+elem\+\_\+opaque\+\_\+dup@{iput\+\_\+fifo\+\_\+elem\+\_\+opaque\+\_\+dup}}
 \index{iput\+\_\+fifo\+\_\+elem\+\_\+opaque\+\_\+dup@{iput\+\_\+fifo\+\_\+elem\+\_\+opaque\+\_\+dup}!proc\+\_\+if\+\_\+s@{proc\+\_\+if\+\_\+s}}
@@ -81,7 +88,7 @@ This callback is registered in the F\+I\+FO management A\+PI and is used to inte
 \end{DoxyParams}
 
 
-Definition at line 291 of file proc\+\_\+if.\+h.
+Definition at line 306 of file proc\+\_\+if.\+h.
 
 \index{proc\+\_\+if\+\_\+s@{proc\+\_\+if\+\_\+s}!iput\+\_\+fifo\+\_\+elem\+\_\+opaque\+\_\+release@{iput\+\_\+fifo\+\_\+elem\+\_\+opaque\+\_\+release}}
 \index{iput\+\_\+fifo\+\_\+elem\+\_\+opaque\+\_\+release@{iput\+\_\+fifo\+\_\+elem\+\_\+opaque\+\_\+release}!proc\+\_\+if\+\_\+s@{proc\+\_\+if\+\_\+s}}
@@ -93,7 +100,7 @@ This callback is registered in the F\+I\+FO management A\+PI and is complementar
 \end{DoxyParams}
 
 
-Definition at line 304 of file proc\+\_\+if.\+h.
+Definition at line 319 of file proc\+\_\+if.\+h.
 
 \index{proc\+\_\+if\+\_\+s@{proc\+\_\+if\+\_\+s}!open@{open}}
 \index{open@{open}!proc\+\_\+if\+\_\+s@{proc\+\_\+if\+\_\+s}}
@@ -114,7 +121,7 @@ Pointer to the processor context structure on success, N\+U\+LL if fails.
 \end{DoxyReturn}
 
 
-Definition at line 205 of file proc\+\_\+if.\+h.
+Definition at line 206 of file proc\+\_\+if.\+h.
 
 \index{proc\+\_\+if\+\_\+s@{proc\+\_\+if\+\_\+s}!opt@{opt}}
 \index{opt@{opt}!proc\+\_\+if\+\_\+s@{proc\+\_\+if\+\_\+s}}
@@ -131,7 +138,7 @@ Status code (S\+T\+A\+T\+\_\+\+S\+U\+C\+C\+E\+SS code in case of success, for ot
 \end{DoxyReturn}
 
 
-Definition at line 275 of file proc\+\_\+if.\+h.
+Definition at line 290 of file proc\+\_\+if.\+h.
 
 \index{proc\+\_\+if\+\_\+s@{proc\+\_\+if\+\_\+s}!oput\+\_\+fifo\+\_\+elem\+\_\+opaque\+\_\+dup@{oput\+\_\+fifo\+\_\+elem\+\_\+opaque\+\_\+dup}}
 \index{oput\+\_\+fifo\+\_\+elem\+\_\+opaque\+\_\+dup@{oput\+\_\+fifo\+\_\+elem\+\_\+opaque\+\_\+dup}!proc\+\_\+if\+\_\+s@{proc\+\_\+if\+\_\+s}}
@@ -143,28 +150,28 @@ This callback is registered in the F\+I\+FO management A\+PI and is used to inte
 \end{DoxyParams}
 
 
-Definition at line 319 of file proc\+\_\+if.\+h.
+Definition at line 334 of file proc\+\_\+if.\+h.
 
 \index{proc\+\_\+if\+\_\+s@{proc\+\_\+if\+\_\+s}!proc\+\_\+mime@{proc\+\_\+mime}}
 \index{proc\+\_\+mime@{proc\+\_\+mime}!proc\+\_\+if\+\_\+s@{proc\+\_\+if\+\_\+s}}
 \subsubsection[{\texorpdfstring{proc\+\_\+mime}{proc_mime}}]{\setlength{\rightskip}{0pt plus 5cm}const char$\ast$ proc\+\_\+if\+\_\+s\+::proc\+\_\+mime}\hypertarget{structproc__if__s_afdb204f8c976ed829466774aaa6cdf89}{}\label{structproc__if__s_afdb204f8c976ed829466774aaa6cdf89}
-Media type and sub-\/type (formerly known as M\+I\+ME types and sub-\/type). See \href{http://www.iana.org/assignments/media-types/media-types.xhtml}{\tt http\+://www.\+iana.\+org/assignments/media-\/types/media-\/types.\+xhtml}. For muxers we use by default\+: \char`\"{}application/octet-\/stream\char`\"{} 
+Media type and sub-\/type (formerly known as M\+I\+ME types and sub-\/type). See \href{http://www.iana.org/assignments/media-types/media-types.xhtml}{\tt http\+://www.\+iana.\+org/assignments/media-\/types/media-\/types.\+xhtml}. For muxers we use by default\+: \char`\"{}application/octet-\/stream\char`\"{} This field is mandatory (can not be set to N\+U\+LL). 
 
-Definition at line 182 of file proc\+\_\+if.\+h.
+Definition at line 185 of file proc\+\_\+if.\+h.
 
 \index{proc\+\_\+if\+\_\+s@{proc\+\_\+if\+\_\+s}!proc\+\_\+name@{proc\+\_\+name}}
 \index{proc\+\_\+name@{proc\+\_\+name}!proc\+\_\+if\+\_\+s@{proc\+\_\+if\+\_\+s}}
 \subsubsection[{\texorpdfstring{proc\+\_\+name}{proc_name}}]{\setlength{\rightskip}{0pt plus 5cm}const char$\ast$ proc\+\_\+if\+\_\+s\+::proc\+\_\+name}\hypertarget{structproc__if__s_aa284f1d0bdde2fae0b51101f658430ee}{}\label{structproc__if__s_aa284f1d0bdde2fae0b51101f658430ee}
-Unambiguous P\+R\+OC identifier name (character string). 
+Unambiguous P\+R\+OC identifier name (character string). This field is mandatory (can not be set to N\+U\+LL). 
 
-Definition at line 172 of file proc\+\_\+if.\+h.
+Definition at line 173 of file proc\+\_\+if.\+h.
 
 \index{proc\+\_\+if\+\_\+s@{proc\+\_\+if\+\_\+s}!proc\+\_\+type@{proc\+\_\+type}}
 \index{proc\+\_\+type@{proc\+\_\+type}!proc\+\_\+if\+\_\+s@{proc\+\_\+if\+\_\+s}}
 \subsubsection[{\texorpdfstring{proc\+\_\+type}{proc_type}}]{\setlength{\rightskip}{0pt plus 5cm}const char$\ast$ proc\+\_\+if\+\_\+s\+::proc\+\_\+type}\hypertarget{structproc__if__s_a3a8a04d2e81ca4dfa55a8526644dd729}{}\label{structproc__if__s_a3a8a04d2e81ca4dfa55a8526644dd729}
-Processor type\+: encoder, decoder, multiplexer, demultiplexer. 
+Processor type\+: encoder, decoder, multiplexer, demultiplexer. This field is mandatory (can not be set to N\+U\+LL). 
 
-Definition at line 176 of file proc\+\_\+if.\+h.
+Definition at line 178 of file proc\+\_\+if.\+h.
 
 \index{proc\+\_\+if\+\_\+s@{proc\+\_\+if\+\_\+s}!process\+\_\+frame@{process\+\_\+frame}}
 \index{process\+\_\+frame@{process\+\_\+frame}!proc\+\_\+if\+\_\+s@{proc\+\_\+if\+\_\+s}}
@@ -183,7 +190,14 @@ Status code (S\+T\+A\+T\+\_\+\+S\+U\+C\+C\+E\+SS code in case of success, for ot
 \end{DoxyReturn}
 
 
-Definition at line 259 of file proc\+\_\+if.\+h.
+Definition at line 274 of file proc\+\_\+if.\+h.
+
+\index{proc\+\_\+if\+\_\+s@{proc\+\_\+if\+\_\+s}!recv\+\_\+frame@{recv\+\_\+frame}}
+\index{recv\+\_\+frame@{recv\+\_\+frame}!proc\+\_\+if\+\_\+s@{proc\+\_\+if\+\_\+s}}
+\subsubsection[{\texorpdfstring{recv\+\_\+frame}{recv_frame}}]{\setlength{\rightskip}{0pt plus 5cm}int($\ast$ proc\+\_\+if\+\_\+s\+::recv\+\_\+frame) ({\bf proc\+\_\+ctx\+\_\+t} $\ast$proc\+\_\+ctx, {\bf proc\+\_\+frame\+\_\+ctx\+\_\+t} $\ast$$\ast$ref\+\_\+proc\+\_\+frame\+\_\+ctx)}\hypertarget{structproc__if__s_a43115b2b1fa63fbfca191c18f28f2fea}{}\label{structproc__if__s_a43115b2b1fa63fbfca191c18f28f2fea}
+//\+T\+O\+DO This callback is optional (can be set to N\+U\+LL). 
+
+Definition at line 229 of file proc\+\_\+if.\+h.
 
 \index{proc\+\_\+if\+\_\+s@{proc\+\_\+if\+\_\+s}!rest\+\_\+get@{rest\+\_\+get}}
 \index{rest\+\_\+get@{rest\+\_\+get}!proc\+\_\+if\+\_\+s@{proc\+\_\+if\+\_\+s}}
@@ -202,7 +216,7 @@ Status code (S\+T\+A\+T\+\_\+\+S\+U\+C\+C\+E\+SS code in case of success, for ot
 \end{DoxyReturn}
 
 
-Definition at line 245 of file proc\+\_\+if.\+h.
+Definition at line 260 of file proc\+\_\+if.\+h.
 
 \index{proc\+\_\+if\+\_\+s@{proc\+\_\+if\+\_\+s}!rest\+\_\+put@{rest\+\_\+put}}
 \index{rest\+\_\+put@{rest\+\_\+put}!proc\+\_\+if\+\_\+s@{proc\+\_\+if\+\_\+s}}
@@ -219,7 +233,14 @@ Status code (S\+T\+A\+T\+\_\+\+S\+U\+C\+C\+E\+SS code in case of success, for ot
 \end{DoxyReturn}
 
 
-Definition at line 228 of file proc\+\_\+if.\+h.
+Definition at line 243 of file proc\+\_\+if.\+h.
+
+\index{proc\+\_\+if\+\_\+s@{proc\+\_\+if\+\_\+s}!send\+\_\+frame@{send\+\_\+frame}}
+\index{send\+\_\+frame@{send\+\_\+frame}!proc\+\_\+if\+\_\+s@{proc\+\_\+if\+\_\+s}}
+\subsubsection[{\texorpdfstring{send\+\_\+frame}{send_frame}}]{\setlength{\rightskip}{0pt plus 5cm}int($\ast$ proc\+\_\+if\+\_\+s\+::send\+\_\+frame) ({\bf proc\+\_\+ctx\+\_\+t} $\ast$proc\+\_\+ctx, const {\bf proc\+\_\+frame\+\_\+ctx\+\_\+t} $\ast$proc\+\_\+frame\+\_\+ctx)}\hypertarget{structproc__if__s_a0393cc5e598e19951d447a926c364e3f}{}\label{structproc__if__s_a0393cc5e598e19951d447a926c364e3f}
+// T\+O\+DO This callback is optional (can be set to N\+U\+LL). 
+
+Definition at line 221 of file proc\+\_\+if.\+h.
 
 
 
